#490 - Refactor while testing.